sdk_tests/tests/state-macro-fail/generic_state_name_collide_const_generic.rs
#![no_main]
use read_write_state_derive::ReadWriteState;

#[derive(ReadWriteState)]
struct SomeState<const ReadSomeState: usize> { }
